turtleart.lessons.turtleart.Main.TriangleFlat.scala.error
Source:6: error: value avance is not a member of Unit
	gauche(30)avance(200)
                  ^